--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "youtubeapidemo.examples.com.bakingapp"
-        minSdkVersion 15
+        minSdkVersion 20
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -28,7 +28,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.jakewharton:butterknife:8.6.0'
-    compile 'com.bignerdranch.android:simple-item-decoration:1.0.0'
+    compile 'com.google.android.exoplayer:exoplayer:r2.4.0'
+    compile 'com.devbrackets.android:exomedia:4.0.2'
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     testCompile 'junit:junit:4.12'
